--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             </ul>
         </div>
     </header>
+
+    <main class="main">
+        <section class="hero">
+            <div class="container">
+                <div class="hero__div">
+                  <h1 class="hero__heding">About Us</h1>
+                   <p class="hero__text">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in every shipment.</p>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
