--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
 
         <section class="about">
-            <div class="container">
+            <div class="container ">
                 <img src="./img/brat.png" alt="brat" width="445" height="520">
 
                 <div class="about__div">
@@ -49,7 +49,21 @@
                 </div>
             </div>
         </section>
+
+        <section class="iphone">
+            <div class="container">
+                <div class="iphone__div">
+                    <div class="div__div">
+                        <h3>Uncompromising quality</h3>
+                        <p class="iphone__text">Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.</p>
+                    </div>
+                    <img class="imges" src="./img/4-rasm.png" alt="bitmap" width="445" height="474">
+                </div>
+            </div>
+        </section>
     </main>
     
+    <script src="https://unpkg.com/magic-snowflakes@6.3.0/dist/snowflakes.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
